--- a/style.css
+++ b/style.css
@@ -1,1 +1,117 @@
+body{
+    font-family: 'Poppins', sans-serif;
+margin: 0%;
+}
+h1{
+    font-size: 60px;
+}
+h2{
+    font-size: 43px;
+    font-weight: 600;
+}
+h4{
+    font-weight: 200;
+}
+p{
+    font-size: 25px;
+}
+.orange-color{
+    color: rgb(245, 146, 17);
+}
+.Dark-Grey{
+    color: rgb(97, 95, 95);
+}
+section{
+    display: flex;
+}
 
+.half-width{
+    width: 50%;
+    padding-left: 2%;
+    padding-top: 9%;
+}
+.half-width img{
+width: 100%;
+padding-right: 5%;
+padding-bottom: 10%;
+}
+
+.link-button{
+    text-decoration: none;
+    background-image: linear-gradient(orange,tomato);
+    padding: 20px 40px;
+    color: white;
+    border-radius: 35px;
+}
+.Order-Food{
+    background-image: url(images/female/Group\ 8425.png):
+   
+ background-position:right ;
+ background-repeat:no-repeat;
+    
+}
+.flexible-container{
+    display: flex;
+    padding-left: 5%;
+    margin-bottom:20px;
+
+}
+.About-Me{
+    background-image: url(images/shapes/7.png);
+    background-repeat: no-repeat;
+    background-position:center;
+    background-size: 100%;
+}
+.About-Me img{
+    width: 50%;
+padding-left: 30%;
+}
+.My-Recipies{
+    text-align: center;
+    padding-left: 25%;
+    padding-right: 10%;
+    padding-bottom: 2%;
+    width: 50%;
+}
+
+.Reciepe-item{ 
+width: 40%;
+margin-left: 2%;
+margin-right: 2%;
+border: 10px;
+padding-left: 2%;
+padding-right: 2%;
+padding-top: 2%;
+padding-bottom: 2%;
+border-radius: 30px;
+box-shadow: 10px 10px 40px grey;
+}
+.My-Followers{
+    width: 90%;
+    margin-top: 100px;
+    margin-bottom: 20px;
+    margin-left: 80px;
+    margin-right: 10px;
+    border-top-width:0%;
+padding-left:2%; 
+padding-right: 2%; 
+padding-bottom: 0%;
+padding-top: 0%;
+border-radius: 70px;
+border-bottom:5px 5px 10px whitesmoke;
+border-top: 5px 5px 10px whitesmoke;
+box-shadow: 5px 5px 10px whitesmoke;
+border: 3px solid whitesmoke;
+box-sizing: border-box;
+
+}
+
+footer{
+    text-align: center;
+    background-color: black;
+    width: 100%;
+    height: 30%;
+    font-weight:200;
+    font-size: 3%;
+    padding-bottom: 5%;
+}
